Fix heading spacing

--- a/main.css
+++ b/main.css
@@ -101,7 +101,8 @@ main {
 }
 
 main h2, main h3 {
-    margin-top: 0;
+    margin-top: 8px;
+    margin-bottom: 8px;
 }
 
 .fab {
